buttons: remove focus outline, fix default text alignment, closes #436

--- a/src/app.css
+++ b/src/app.css
@@ -11,4 +11,8 @@ button {
   color: inherit;
   background: initial;
   border: initial;
+  text-align: initial;
+  &:focus {
+    outline: initial;
+  }
 }
